force-app/main/default/objects/OA_Enrichment_Exception__c/OA_Enrichment_Exception__c.object-meta.xml
<CustomObject>
    <description>Human-review exception queue for the four cases: low-confidence match, source conflict, duplicate merge, policy exception.</description>
    <label>OA Enrichment Exception</label>
    <nameField>
        <displayFormat>EXC-{00000}</displayFormat>
        <label>OA Enrichment Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Enrichment Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>