force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>