force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Discovered_Organization__c.field-meta.xml
<CustomField>
    <fullName>Discovered_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discovered Organization</label>
    <referenceTo>OA_Discovered_Organization__c</referenceTo>
    <relationshipLabel>OA_Enrichment_Exceptions</relationshipLabel>
    <relationshipName>OA_Enrichment_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>