force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>