force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Recommended_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Resolution__c</fullName>
    <label>Recommended Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>