force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OA_Enrichment_Exceptions</relationshipLabel>
    <relationshipName>OA_Enrichment_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>