force-app/main/default/objects/OA_Enrichment_Exception__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>